sdk/quota/arm-quota/samples/v1/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                 | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| ------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [groupQuotaLimitsListSample.ts][groupquotalimitslistsample]                                                   | Gets the GroupQuotaLimits for the specified resource provider and location for resource names passed in $filter=resourceName eq {SKU}. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotaLimits/ListGroupQuotaLimits-Compute.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [groupQuotaLimitsRequestGetSample.ts][groupquotalimitsrequestgetsample]                                       | Get API to check the status of a GroupQuota request by requestId. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotaLimitsRequests/GroupQuotaLimitsRequests_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [groupQuotaLimitsRequestListSample.ts][groupquotalimitsrequestlistsample]                                     | Get API to check the status of a GroupQuota request by requestId. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotaLimitsRequests/GroupQuotaLimitsRequests_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [groupQuotaLimitsRequestUpdateSample.ts][groupquotalimitsrequestupdatesample]                                 | Create the GroupQuota requests for a specific ResourceProvider/Location/Resource. The resourceName properties are specified in the request body. Only 1 resource quota can be requested. Please note that patch request creates a new groupQuota request. Use the polling API - OperationsStatus URI specified in Azure-AsyncOperation header field, with retry-after duration in seconds to check the intermediate status. This API provides the finals status with the request details and status. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotaLimitsRequests/PatchGroupQuotaLimitsRequests-Compute.json                                                                                                                                                                                                                       |
| [groupQuotaSubscriptionAllocationListSample.ts][groupquotasubscriptionallocationlistsample]                   | Gets all the quota allocated to a subscription for the specified resource provider and location for resource names passed in $filter=resourceName eq {SKU}. This will include the GroupQuota and total quota allocated to the subscription. Only the Group quota allocated to the subscription can be allocated back to the MG Group Quota. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/SubscriptionQuotaAllocation/SubscriptionQuotaAllocation_List-Compute.json                                                                                                                                                                                                                                                                                                                                                                          |
| [groupQuotaSubscriptionAllocationRequestGetSample.ts][groupquotasubscriptionallocationrequestgetsample]       | Get the quota allocation request status for the subscriptionId by allocationId. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/SubscriptionQuotaAllocationRequests/SubscriptionQuotaAllocationRequests_Get-Compute.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [groupQuotaSubscriptionAllocationRequestListSample.ts][groupquotasubscriptionallocationrequestlistsample]     | Get all the quotaAllocationRequests for a resourceProvider/location. The filter paramter for location is required. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/SubscriptionQuotaAllocationRequests/SubscriptionQuotaAllocationRequests_List-Compute.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [groupQuotaSubscriptionAllocationRequestUpdateSample.ts][groupquotasubscriptionallocationrequestupdatesample] | Request to assign quota from group quota to a specific Subscription. The assign GroupQuota to subscriptions or reduce the quota allocated to subscription to give back the unused quota ( quota >= usages) to the groupQuota. So, this API can be used to assign Quota to subscriptions and assign back unused quota to group quota, which can be assigned to another subscriptions in the GroupQuota. User can collect unused quotas from multiple subscriptions within the groupQuota and assign the groupQuota to the subscription, where it's needed. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/SubscriptionQuotaAllocationRequests/PatchSubscriptionQuotaAllocationRequest-Compute.json                                                                                                                                             |
| [groupQuotaSubscriptionRequestsGetSample.ts][groupquotasubscriptionrequestsgetsample]                         | Get API to check the status of a subscriptionIds request by requestId. Use the polling API - OperationsStatus URI specified in Azure-AsyncOperation header field, with retry-after duration in seconds to check the intermediate status. This API provides the finals status with the request details and status. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/SubscriptionRequests/SubscriptionRequests_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [groupQuotaSubscriptionRequestsListSample.ts][groupquotasubscriptionrequestslistsample]                       | List API to check the status of a subscriptionId requests by requestId. Request history is maintained for 1 year. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/SubscriptionRequests/SubscriptionRequests_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [groupQuotaSubscriptionsCreateOrUpdateSample.ts][groupquotasubscriptionscreateorupdatesample]                 | Adds a subscription to GroupQuotas. The subscriptions will be validated based on the additionalAttributes defined in the GroupQuota. The additionalAttributes works as filter for the subscriptions, which can be included in the GroupQuotas. The request's TenantId is validated against the subscription's TenantId. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotasSubscriptions/PutGroupQuotasSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                               |
| [groupQuotaSubscriptionsDeleteSample.ts][groupquotasubscriptionsdeletesample]                                 | Removes the subscription from GroupQuotas. The request's TenantId is validated against the subscription's TenantId. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotasSubscriptions/DeleteGroupQuotaSubscriptions.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [groupQuotaSubscriptionsGetSample.ts][groupquotasubscriptionsgetsample]                                       | Returns the subscriptionIds along with its provisioning state for being associated with the GroupQuota. If the subscription is not a member of GroupQuota, it will return 404, else 200. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotasSubscriptions/GetGroupQuotaSubscriptions.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [groupQuotaSubscriptionsListSample.ts][groupquotasubscriptionslistsample]                                     | Returns a list of the subscriptionIds associated with the GroupQuotas. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotasSubscriptions/ListGroupQuotaSubscriptions.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [groupQuotaSubscriptionsUpdateSample.ts][groupquotasubscriptionsupdatesample]                                 | Updates the GroupQuotas with the subscription to add to the subscriptions list. The subscriptions will be validated if additionalAttributes are defined in the GroupQuota. The request's TenantId is validated against the subscription's TenantId. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotasSubscriptions/PatchGroupQuotasSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [groupQuotasCreateOrUpdateSample.ts][groupquotascreateorupdatesample]                                         | Creates a new GroupQuota for the name passed. A RequestId will be returned by the Service. The status can be polled periodically. The status Async polling is using standards defined at - https://github.com/Azure/azure-resource-manager-rpc/blob/master/v1.0/async-api-reference.md#asynchronous-operations. Use the OperationsStatus URI provided in Azure-AsyncOperation header, the duration will be specified in retry-after header. Once the operation gets to terminal state - Succeeded \| Failed, then the URI will change to Get URI and full details can be checked. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotas/PutGroupQuotas.json                                                                                                                                                                              |
| [groupQuotasDeleteSample.ts][groupquotasdeletesample]                                                         | Deletes the GroupQuotas for the name passed. All the remaining shareQuota in the GroupQuotas will be lost. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotas/DeleteGroupQuotas.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [groupQuotasGetSample.ts][groupquotasgetsample]                                                               | Gets the GroupQuotas for the name passed. It will return the GroupQuotas properties only. The details on group quota can be access from the group quota APIs. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotas/GetGroupQuotas.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [groupQuotasListSample.ts][groupquotaslistsample]                                                             | Lists GroupQuotas for the scope passed. It will return the GroupQuotas QuotaEntity properties only.The details on group quota can be access from the group quota APIs. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotas/GetGroupQuotasList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [groupQuotasUpdateSample.ts][groupquotasupdatesample]                                                         | Updates the GroupQuotas for the name passed. A GroupQuotas RequestId will be returned by the Service. The status can be polled periodically. The status Async polling is using standards defined at - https://github.com/Azure/azure-resource-manager-rpc/blob/master/v1.0/async-api-reference.md#asynchronous-operations. Use the OperationsStatus URI provided in Azure-AsyncOperation header, the duration will be specified in retry-after header. Once the operation gets to terminal state - Succeeded \| Failed, then the URI will change to Get URI and full details can be checked. Any change in the filters will be applicable to the future quota assignments, existing quota allocated to subscriptions from the GroupQuotas remains unchanged. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GroupQuotas/PatchGroupQuotas.json |
| [quotaCreateOrUpdateSample.ts][quotacreateorupdatesample]                                                     | Create or update the quota limit for the specified resource with the requested value. To update the quota, follow these steps: 1. Use the GET operation for quotas and usages to determine how much quota remains for the specific resource and to calculate the new quota limit. These steps are detailed in [this example](https://techcommunity.microsoft.com/t5/azure-governance-and-management/using-the-new-quota-rest-api/ba-p/2183670). 2. Use this PUT operation to update the quota limit. Please check the URI in location header for the detailed status of the request. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/putNetworkOneSkuQuotaRequest.json                                                                                                                                                                         |
| [quotaGetSample.ts][quotagetsample]                                                                           | Get the quota limit of a resource. The response can be used to determine the remaining quota to calculate a new quota limit that can be submitted with a PUT request. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/getComputeOneSkuQuotaLimit.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [quotaListSample.ts][quotalistsample]                                                                         | Get a list of current quota limits of all resources for the specified scope. The response from this GET operation can be leveraged to submit requests to update a quota. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/getComputeQuotaLimits.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [quotaOperationListSample.ts][quotaoperationlistsample]                                                       | List all the operations supported by the Microsoft.Quota resource provider. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/GetOperations.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [quotaRequestStatusGetSample.ts][quotarequeststatusgetsample]                                                 | Get the quota request details and status by quota request ID for the resources of the resource provider at a specific location. The quota request ID **id** is returned in the response of the PUT operation. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/getQuotaRequestStatusFailed.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [quotaRequestStatusListSample.ts][quotarequeststatuslistsample]                                               | For the specified scope, get the current quota requests for a one year period ending at the time is made. Use the **oData** filter to select quota requests. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/getQuotaRequestsHistory.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [quotaUpdateSample.ts][quotaupdatesample]                                                                     | Update the quota limit for a specific resource to the specified value: 1. Use the Usages-GET and Quota-GET operations to determine the remaining quota for the specific resource and to calculate the new quota limit. These steps are detailed in [this example](https://techcommunity.microsoft.com/t5/azure-governance-and-management/using-the-new-quota-rest-api/ba-p/2183670). 2. Use this PUT operation to update the quota limit. Please check the URI in location header for the detailed status of the request. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/patchComputeQuotaRequest.json                                                                                                                                                                                                                                        |
| [usagesGetSample.ts][usagesgetsample]                                                                         | Get the current usage of a resource. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/getComputeOneSkuUsages.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [usagesListSample.ts][usageslistsample]                                                                       | Get a list of current usage for all resources for the scope specified. x-ms-original-file: specification/quota/resource-manager/Microsoft.Quota/stable/2025-03-01/examples/getComputeUsages.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/groupQuotaLimitsListSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env  node dist/groupQuotaLimitsListSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[groupquotalimitslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaLimitsListSample.ts
[groupquotalimitsrequestgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaLimitsRequestGetSample.ts
[groupquotalimitsrequestlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaLimitsRequestListSample.ts
[groupquotalimitsrequestupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaLimitsRequestUpdateSample.ts
[groupquotasubscriptionallocationlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaSubscriptionAllocationListSample.ts
[groupquotasubscriptionallocationrequestgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaSubscriptionAllocationRequestGetSample.ts
[groupquotasubscriptionallocationrequestlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaSubscriptionAllocationRequestListSample.ts
[groupquotasubscriptionallocationrequestupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaSubscriptionAllocationRequestUpdateSample.ts
[groupquotasubscriptionrequestsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaSubscriptionRequestsGetSample.ts
[groupquotasubscriptionrequestslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaSubscriptionRequestsListSample.ts
[groupquotasubscriptionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaSubscriptionsCreateOrUpdateSample.ts
[groupquotasubscriptionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaSubscriptionsDeleteSample.ts
[groupquotasubscriptionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaSubscriptionsGetSample.ts
[groupquotasubscriptionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaSubscriptionsListSample.ts
[groupquotasubscriptionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotaSubscriptionsUpdateSample.ts
[groupquotascreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotasCreateOrUpdateSample.ts
[groupquotasdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotasDeleteSample.ts
[groupquotasgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotasGetSample.ts
[groupquotaslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotasListSample.ts
[groupquotasupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/groupQuotasUpdateSample.ts
[quotacreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/quotaCreateOrUpdateSample.ts
[quotagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/quotaGetSample.ts
[quotalistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/quotaListSample.ts
[quotaoperationlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/quotaOperationListSample.ts
[quotarequeststatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/quotaRequestStatusGetSample.ts
[quotarequeststatuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/quotaRequestStatusListSample.ts
[quotaupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/quotaUpdateSample.ts
[usagesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/usagesGetSample.ts
[usageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/quota/arm-quota/samples/v1/typescript/src/usagesListSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-quota?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/quota/arm-quota/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
